# RubiMorph

./: .gitattributes  .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml  requirements-build.txt
.github/workflows/: ci.yml  windows-release.yml
LICENSES/: README.md
docs/: conversion-matrix.md  coverage-audit.md  custom-format-profiles.md  design.md  installer.md  license-review.md  naming.md  platform-inventory.md  platform-research.md  platform-specs.md  publication-policy.md  release-notes-template.md  release-process.md  release.md  sbom.md  security-and-privacy.md  usage-windows.md  web-future.md
examples/custom-profiles/: README.txt  author-work-sample-custom-format.txt  author-work-sample-kakuyomu.txt  example-expected-output.txt  example-input.txt
installer/inno/: rubimorph.iss
installer/nsis/: README.md
installer/pyinstaller/: rubimorph.spec  rubimorph_cli.py
schemas/: custom-format-profile-v1.schema.json
scripts/: build_exe.cmd  build_installer.cmd  check_public_tree.py  clean_build.cmd  generate_checksums.cmd  generate_sbom.cmd  prepare_release_assets.ps1  pull_latest.cmd  run_cli_sample.cmd  run_gui.cmd  run_tests.cmd  setup_rubimorph_build_env.cmd  setup_rubimorph_build_env.ps1
src/cli/: nmc.py  rubimorph.py
src/core/novel_markup/: __init__.py  convert.py  diagnostics.py  parser.py  renderer.py  types.py
src/core/rubimorph/: __init__.py  cli.py  convert.py  (+8 more)
src/desktop/: app.py  rubimorph_gui.py
src/web/: README.md
tests/: test_core.py  test_custom_profiles.py  test_golden.py  test_gui_app.py  test_web_assets.py
(+8 files in other folders)
